datasource db {
  provider = "postgresql"
}

generator client {
  provider = "prisma-client-js"
}

model Account {
  id            Int       @id @default(autoincrement()) @map("account_id")
  username      String    @unique @db.VarChar(100)
  email         String    @unique @db.VarChar(255)
  passwordHash  String?   @db.VarChar(255) @map("password_hash")
  role          String?   @default("patient") @db.VarChar(20)
  createdAt     DateTime  @default(now()) @map("created_at")

  patient       Patient?
}

model Patient {
  id          Int         @id @default(autoincrement()) @map("patient_id")
  accountId   Int         @unique @map("account_id")
  age         Int?
  gender      String?     @db.VarChar(10)
  createdAt   DateTime    @default(now()) @map("created_at")

  account     Account     @relation(fields: [accountId], references: [id])
  skinScans   SkinScan[]
  diaries     SkinDiary[]
}

model Disease {
  id             Int       @id @default(autoincrement()) @map("disease_id")
  name           String?   @db.VarChar(100)
  description    String?   @db.Text
  visualPattern  String?   @db.VarChar(100) @map("visual_pattern")
  colorPattern   String?   @db.VarChar(100) @map("color_pattern")
  borderType     String?   @db.VarChar(100) @map("border_type")
  isContagious   Boolean?  @map("is_contagious")

  images         DiseaseImage[]
  rules          DiseaseRule[]
  advices        DiseaseAdvice[]
  predictions    Prediction[]
  
  diagnosisPredicted DiagnosisResult[] @relation("PredictedDisease")
  diagnosisFinal     DiagnosisResult[] @relation("FinalDisease")
  feedbackPredicted  FeedbackLog[]     @relation("PredictedDiseaseFeedback")
  feedbackActual     FeedbackLog[]     @relation("ActualDiseaseFeedback")
}

model DiseaseImage {
  id         Int      @id @default(autoincrement()) @map("image_id")
  diseaseId  Int?     @map("disease_id")
  imageUrl   String?  @db.Text @map("image_url")
  source     String?  @db.VarChar(50)
  createdAt  DateTime @default(now()) @map("created_at")

  disease    Disease? @relation(fields: [diseaseId], references: [id])
}

model DiagnosticQuestion {
  id           Int      @id @default(autoincrement()) @map("question_id")
  questionText String?  @db.Text @map("question_text")
  createdAt    DateTime @default(now()) @map("created_at")

  rules        DiseaseRule[]
}

model DiseaseRule {
  id             Int     @id @default(autoincrement()) @map("rule_id")
  diseaseId      Int?    @map("disease_id")
  questionId     Int?    @map("question_id")
  expectedAnswer Boolean? @map("expected_answer")
  weight         Float?

  disease        Disease?            @relation(fields: [diseaseId], references: [id])
  question       DiagnosticQuestion? @relation(fields: [questionId], references: [id])
}

model DiseaseAdvice {
  id         Int      @id @default(autoincrement()) @map("advice_id")
  diseaseId  Int?     @map("disease_id")
  adviceType String?  @db.VarChar(20) @map("advice_type")
  title      String?  @db.VarChar(255)
  content    String?  @db.Text
  priority   Int?

  disease    Disease? @relation(fields: [diseaseId], references: [id])
}

model EmergencyRule {
  id            Int      @id @default(autoincrement()) @map("emergency_id")
  conditionText String?  @db.Text @map("condition_text")
  isActive      Boolean? @map("is_active")
}

model SkinScan {
  id         Int      @id @default(autoincrement()) @map("scan_id")
  patientId  Int?     @map("patient_id")
  createdAt  DateTime @default(now()) @map("created_at")

  patient    Patient? @relation(fields: [patientId], references: [id])
  images     ScanImage[]
  predictions Prediction[]
  diagnosis  DiagnosisResult?
  feedback   FeedbackLog[]
  diaries    SkinDiary[]
}

model ScanImage {
  id        Int      @id @default(autoincrement()) @map("image_id")
  scanId    Int?     @map("scan_id")
  imageUrl  String?  @db.Text @map("image_url")
  angle     String?  @db.VarChar(50)
  isBlurry  Boolean? @map("is_blurry")
  createdAt DateTime @default(now()) @map("created_at")

  scan      SkinScan? @relation(fields: [scanId], references: [id])
}

model Prediction {
  id           Int      @id @default(autoincrement()) @map("prediction_id")
  scanId       Int?     @map("scan_id")
  diseaseId    Int?     @map("disease_id")
  confidence   Float?
  modelVersion String?  @db.VarChar(50) @map("model_version")
  createdAt    DateTime @default(now()) @map("created_at")

  scan         SkinScan? @relation(fields: [scanId], references: [id])
  disease      Disease?  @relation(fields: [diseaseId], references: [id])
}

model DiagnosisResult {
  id                 Int      @id @default(autoincrement()) @map("result_id")
  scanId             Int      @unique @map("scan_id")
  predictedDiseaseId Int?     @map("predicted_disease_id")
  finalDiseaseId     Int?     @map("final_disease_id")
  isEmergency        Boolean? @map("is_emergency")
  createdAt          DateTime @default(now()) @map("created_at")

  scan               SkinScan @relation(fields: [scanId], references: [id])
  predictedDisease   Disease? @relation("PredictedDisease", fields: [predictedDiseaseId], references: [id])
  finalDisease       Disease? @relation("FinalDisease", fields: [finalDiseaseId], references: [id])
}

model FeedbackLog {
  id                 Int      @id @default(autoincrement()) @map("feedback_id")
  scanId             Int?     @map("scan_id")
  predictedDiseaseId Int?     @map("predicted_disease_id")
  actualDiseaseId    Int?     @map("actual_disease_id")
  isCorrect          Boolean? @map("is_correct")
  note               String?  @db.Text
  createdAt          DateTime @default(now()) @map("created_at")

  scan               SkinScan? @relation(fields: [scanId], references: [id])
  predictedDisease   Disease?  @relation("PredictedDiseaseFeedback", fields: [predictedDiseaseId], references: [id])
  actualDisease      Disease?  @relation("ActualDiseaseFeedback", fields: [actualDiseaseId], references: [id])
}

model SkinDiary {
  id             Int      @id @default(autoincrement()) @map("diary_id")
  patientId      Int?     @map("patient_id")
  scanId         Int?     @map("scan_id")
  conditionScore Int?     @map("condition_score")
  note           String?  @db.Text
  createdAt      DateTime @default(now()) @map("created_at")

  patient        Patient?  @relation(fields: [patientId], references: [id])
  scan           SkinScan? @relation(fields: [scanId], references: [id])
}
